apps/home-assistant/mosquitto-mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-mqtts
spec:
  type: LoadBalancer
  selector:
    app: mosquitto
  ports:
  - port: 1883
